Modified apache CB used execute

--- a/cookbooks/apache/templates/default/custom.erb
+++ b/cookbooks/apache/templates/default/custom.erb
@@ -15,5 +15,7 @@
     AllowOverride None
     Order allow,deny
     allow from all
+    allow from 52.27.66.228
+    allow from 52.11.203.43
   </Directory>
 </VirtualHost>
