added permission for apache 2.4

--- a/cookbooks/apache/templates/default/custom.erb
+++ b/cookbooks/apache/templates/default/custom.erb
@@ -12,10 +12,7 @@
   </Directory>
   <Directory <%= @document_root %>>
     Options Indexes FollowSymLinks MultiViews
-    AllowOverride None
-    Order allow,deny
-    allow from all
-    allow from 52.27.66.228
-    allow from 52.11.203.43
-  </Directory>
+    AllowOverride All
+    Require all granted
+    </Directory>
 </VirtualHost>
