added permission for apache 2.4 setenforce 0

--- a/cookbooks/apache/templates/default/custom.erb
+++ b/cookbooks/apache/templates/default/custom.erb
@@ -8,7 +8,7 @@
   DocumentRoot <%= @document_root %>
   <Directory />
     Options FollowSymLinks
-    AllowOverride None
+    Require all granted
   </Directory>
   <Directory <%= @document_root %>>
     Options Indexes FollowSymLinks MultiViews
